--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "popmotion": "11.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-scripts": "^5.0.0-next.47",
     "react-use-measure": "2.1.1",
     "three": "0.135.0"
   },
@@ -20,10 +21,10 @@
     "typescript": "4.1.3"
   },
   "scripts": {
-    "start": "npm run start",
-    "build": "npm run build",
-    "test": "npm run test --env=jsdom",
-    "eject": "npm run eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "browserslist": [
     ">0.2%",
